MongoQueryGeneratorFork/QueryBuilder-Parser/gen/QueryBuilderQueriesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/daniel/GitProjects/mongoQueryGenerator/MongoQueryGeneratorFork/QueryBuilder-Parser/QueryBuilderQueries.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace QueryBuilder.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class QueryBuilderQueriesParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, NAME=36, INTEGER=37, VALUE=38, 
		NUMERIC=39, WS=40;
	public const int
		RULE_query = 0, RULE_entity = 1, RULE_simpleEntity = 2, RULE_listOfEntities = 3, 
		RULE_rjoin = 4, RULE_select = 5, RULE_simpleAttribute = 6, RULE_listOfAttributes = 7, 
		RULE_alias = 8, RULE_aggregationFunction = 9, RULE_where = 10, RULE_expressionList = 11, 
		RULE_arithmeticExpression = 12, RULE_otherExpression = 13, RULE_logicalExpression = 14, 
		RULE_groupby = 15, RULE_having = 16, RULE_orderby = 17;
	public static readonly string[] ruleNames = {
		"query", "entity", "simpleEntity", "listOfEntities", "rjoin", "select", 
		"simpleAttribute", "listOfAttributes", "alias", "aggregationFunction", 
		"where", "expressionList", "arithmeticExpression", "otherExpression", 
		"logicalExpression", "groupby", "having", "orderby"
	};

	private static readonly string[] _LiteralNames = {
		null, "'from'", "'select'", "'where'", "'group by'", "'having'", "'order by'", 
		"'('", "')'", "','", "'rjoin'", "'.'", "'avg'", "'max'", "'min'", "'sum'", 
		"'count'", "'(*)'", "'='", "'<>'", "'>='", "'<='", "'>'", "'<'", "'like'", 
		"'is not null'", "'is null'", "'between'", "'and'", "'not in'", "'in'", 
		"'not exists'", "'exists'", "'or'", "'asc'", "'desc'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"NAME", "INTEGER", "VALUE", "NUMERIC", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "QueryBuilderQueries.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static QueryBuilderQueriesParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public QueryBuilderQueriesParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public QueryBuilderQueriesParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class QueryContext : ParserRuleContext {
		public EntityContext entity() {
			return GetRuleContext<EntityContext>(0);
		}
		public SelectContext select() {
			return GetRuleContext<SelectContext>(0);
		}
		public WhereContext where() {
			return GetRuleContext<WhereContext>(0);
		}
		public GroupbyContext groupby() {
			return GetRuleContext<GroupbyContext>(0);
		}
		public HavingContext having() {
			return GetRuleContext<HavingContext>(0);
		}
		public OrderbyContext orderby() {
			return GetRuleContext<OrderbyContext>(0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36; Match(T__0);
			State = 37; entity(0);
			State = 38; Match(T__1);
			State = 39; select();
			State = 42;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 40; Match(T__2);
				State = 41; where();
				}
			}

			State = 46;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 44; Match(T__3);
				State = 45; groupby();
				}
			}

			State = 50;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__4) {
				{
				State = 48; Match(T__4);
				State = 49; having();
				}
			}

			State = 54;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 52; Match(T__5);
				State = 53; orderby();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityContext : ParserRuleContext {
		public SimpleEntityContext simpleEntity() {
			return GetRuleContext<SimpleEntityContext>(0);
		}
		public EntityContext entity() {
			return GetRuleContext<EntityContext>(0);
		}
		public RjoinContext rjoin() {
			return GetRuleContext<RjoinContext>(0);
		}
		public ListOfEntitiesContext listOfEntities() {
			return GetRuleContext<ListOfEntitiesContext>(0);
		}
		public EntityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entity; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityContext entity() {
		return entity(0);
	}

	private EntityContext entity(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		EntityContext _localctx = new EntityContext(Context, _parentState);
		EntityContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_entity, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 57; simpleEntity();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 67;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new EntityContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_entity);
					State = 59;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 60; rjoin();
					State = 61; Match(T__6);
					State = 62; listOfEntities();
					State = 63; Match(T__7);
					}
					} 
				}
				State = 69;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class SimpleEntityContext : ParserRuleContext {
		public IToken entityName;
		public IToken entityAlias;
		public ITerminalNode[] NAME() { return GetTokens(QueryBuilderQueriesParser.NAME); }
		public ITerminalNode NAME(int i) {
			return GetToken(QueryBuilderQueriesParser.NAME, i);
		}
		public SimpleEntityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleEntity; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimpleEntity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SimpleEntityContext simpleEntity() {
		SimpleEntityContext _localctx = new SimpleEntityContext(Context, State);
		EnterRule(_localctx, 4, RULE_simpleEntity);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; _localctx.entityName = Match(NAME);
			State = 71; _localctx.entityAlias = Match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListOfEntitiesContext : ParserRuleContext {
		public EntityContext[] entity() {
			return GetRuleContexts<EntityContext>();
		}
		public EntityContext entity(int i) {
			return GetRuleContext<EntityContext>(i);
		}
		public ListOfEntitiesContext listOfEntities() {
			return GetRuleContext<ListOfEntitiesContext>(0);
		}
		public RjoinContext rjoin() {
			return GetRuleContext<RjoinContext>(0);
		}
		public ListOfEntitiesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_listOfEntities; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListOfEntities(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListOfEntitiesContext listOfEntities() {
		ListOfEntitiesContext _localctx = new ListOfEntitiesContext(Context, State);
		EnterRule(_localctx, 6, RULE_listOfEntities);
		try {
			State = 86;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 73; entity(0);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 74; entity(0);
				State = 75; Match(T__8);
				State = 76; listOfEntities();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 78; entity(0);
				State = 79; Match(T__8);
				State = 80; listOfEntities();
				State = 81; rjoin();
				State = 82; Match(T__6);
				State = 83; entity(0);
				State = 84; Match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RjoinContext : ParserRuleContext {
		public IToken relationshipName;
		public IToken relationshipAlias;
		public ITerminalNode[] NAME() { return GetTokens(QueryBuilderQueriesParser.NAME); }
		public ITerminalNode NAME(int i) {
			return GetToken(QueryBuilderQueriesParser.NAME, i);
		}
		public RjoinContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rjoin; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRjoin(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RjoinContext rjoin() {
		RjoinContext _localctx = new RjoinContext(Context, State);
		EnterRule(_localctx, 8, RULE_rjoin);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88; Match(T__9);
			State = 89; _localctx.relationshipName = Match(NAME);
			State = 90; _localctx.relationshipAlias = Match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectContext : ParserRuleContext {
		public SimpleAttributeContext simpleAttribute() {
			return GetRuleContext<SimpleAttributeContext>(0);
		}
		public ListOfAttributesContext listOfAttributes() {
			return GetRuleContext<ListOfAttributesContext>(0);
		}
		public AggregationFunctionContext[] aggregationFunction() {
			return GetRuleContexts<AggregationFunctionContext>();
		}
		public AggregationFunctionContext aggregationFunction(int i) {
			return GetRuleContext<AggregationFunctionContext>(i);
		}
		public SelectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_select; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelect(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectContext select() {
		SelectContext _localctx = new SelectContext(Context, State);
		EnterRule(_localctx, 10, RULE_select);
		int _la;
		try {
			State = 110;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92; simpleAttribute();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93; listOfAttributes();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 94; aggregationFunction();
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__8) {
					{
					{
					State = 95; Match(T__8);
					State = 96; aggregationFunction();
					}
					}
					State = 101;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 102; listOfAttributes();
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__8) {
					{
					{
					State = 103; Match(T__8);
					State = 104; aggregationFunction();
					}
					}
					State = 109;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimpleAttributeContext : ParserRuleContext {
		public IToken entityName;
		public IToken attribute;
		public IToken relationshipName;
		public ITerminalNode[] NAME() { return GetTokens(QueryBuilderQueriesParser.NAME); }
		public ITerminalNode NAME(int i) {
			return GetToken(QueryBuilderQueriesParser.NAME, i);
		}
		public SimpleAttributeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleAttribute; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimpleAttribute(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SimpleAttributeContext simpleAttribute() {
		SimpleAttributeContext _localctx = new SimpleAttributeContext(Context, State);
		EnterRule(_localctx, 12, RULE_simpleAttribute);
		try {
			State = 118;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 112; _localctx.entityName = Match(NAME);
				State = 113; Match(T__10);
				State = 114; _localctx.attribute = Match(NAME);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 115; _localctx.relationshipName = Match(NAME);
				State = 116; Match(T__10);
				State = 117; _localctx.attribute = Match(NAME);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListOfAttributesContext : ParserRuleContext {
		public SimpleAttributeContext simpleAttribute() {
			return GetRuleContext<SimpleAttributeContext>(0);
		}
		public ListOfAttributesContext listOfAttributes() {
			return GetRuleContext<ListOfAttributesContext>(0);
		}
		public ListOfAttributesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_listOfAttributes; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListOfAttributes(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListOfAttributesContext listOfAttributes() {
		ListOfAttributesContext _localctx = new ListOfAttributesContext(Context, State);
		EnterRule(_localctx, 14, RULE_listOfAttributes);
		try {
			State = 125;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 120; simpleAttribute();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 121; simpleAttribute();
				State = 122; Match(T__8);
				State = 123; listOfAttributes();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AliasContext : ParserRuleContext {
		public IToken description;
		public ITerminalNode NAME() { return GetToken(QueryBuilderQueriesParser.NAME, 0); }
		public AliasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_alias; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAlias(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AliasContext alias() {
		AliasContext _localctx = new AliasContext(Context, State);
		EnterRule(_localctx, 16, RULE_alias);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127; _localctx.description = Match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AggregationFunctionContext : ParserRuleContext {
		public SimpleAttributeContext simpleAttribute() {
			return GetRuleContext<SimpleAttributeContext>(0);
		}
		public AliasContext alias() {
			return GetRuleContext<AliasContext>(0);
		}
		public AggregationFunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_aggregationFunction; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAggregationFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AggregationFunctionContext aggregationFunction() {
		AggregationFunctionContext _localctx = new AggregationFunctionContext(Context, State);
		EnterRule(_localctx, 18, RULE_aggregationFunction);
		int _la;
		try {
			State = 169;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,17,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 129; Match(T__11);
				State = 130; Match(T__6);
				State = 131; simpleAttribute();
				State = 132; Match(T__7);
				State = 134;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NAME) {
					{
					State = 133; alias();
					}
				}

				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 136; Match(T__12);
				State = 137; Match(T__6);
				State = 138; simpleAttribute();
				State = 139; Match(T__7);
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NAME) {
					{
					State = 140; alias();
					}
				}

				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 143; Match(T__13);
				State = 144; Match(T__6);
				State = 145; simpleAttribute();
				State = 146; Match(T__7);
				State = 148;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NAME) {
					{
					State = 147; alias();
					}
				}

				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 150; Match(T__14);
				State = 151; Match(T__6);
				State = 152; simpleAttribute();
				State = 153; Match(T__7);
				State = 155;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NAME) {
					{
					State = 154; alias();
					}
				}

				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 157; Match(T__15);
				State = 158; Match(T__6);
				State = 159; simpleAttribute();
				State = 160; Match(T__7);
				State = 162;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NAME) {
					{
					State = 161; alias();
					}
				}

				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 164; Match(T__15);
				State = 165; Match(T__16);
				State = 167;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NAME) {
					{
					State = 166; alias();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhereContext : ParserRuleContext {
		public ExpressionListContext expressionList() {
			return GetRuleContext<ExpressionListContext>(0);
		}
		public WhereContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_where; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhere(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhereContext where() {
		WhereContext _localctx = new WhereContext(Context, State);
		EnterRule(_localctx, 20, RULE_where);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 171; expressionList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionListContext : ParserRuleContext {
		public SimpleAttributeContext simpleAttribute() {
			return GetRuleContext<SimpleAttributeContext>(0);
		}
		public ArithmeticExpressionContext arithmeticExpression() {
			return GetRuleContext<ArithmeticExpressionContext>(0);
		}
		public ITerminalNode VALUE() { return GetToken(QueryBuilderQueriesParser.VALUE, 0); }
		public ITerminalNode NUMERIC() { return GetToken(QueryBuilderQueriesParser.NUMERIC, 0); }
		public LogicalExpressionContext[] logicalExpression() {
			return GetRuleContexts<LogicalExpressionContext>();
		}
		public LogicalExpressionContext logicalExpression(int i) {
			return GetRuleContext<LogicalExpressionContext>(i);
		}
		public ExpressionListContext[] expressionList() {
			return GetRuleContexts<ExpressionListContext>();
		}
		public ExpressionListContext expressionList(int i) {
			return GetRuleContext<ExpressionListContext>(i);
		}
		public OtherExpressionContext otherExpression() {
			return GetRuleContext<OtherExpressionContext>(0);
		}
		public ExpressionListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressionList; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQueryBuilderQueriesVisitor<TResult> typedVisitor = visitor as IQueryBuilderQueriesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressionList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionListContext expressionList() {
		ExpressionListContext _localctx = new ExpressionListContext(Context, State);
		EnterRule(_localctx, 22, RULE_expressionList);
		int _la;
		try {
			int _alt;
			State = 210;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NAME:
				EnterOuterAlt(_localctx, 1);
				{
				State = 173; simpleAttribute();
				State = 174; arithmeticExpression();
				State = 176;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==VALUE) {
					{
					State = 175; Match(VALUE);
					}
				}

				State = 179;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NUMERIC) {
					{
					State = 178; Match(NUMERIC);
					}
				}
